[package]
name = "arch-run"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
directories = "5.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
tar = "0.4"
zstd = "0.13"
tempfile = "3.10"
