[package]
name = "arch-run"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
directories = "5.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
tar = "0.4"
zstd = "0.13"
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5.0"
cap-std = "4.0.2"
bytes = "1.11.1"
async-trait = "0.1.89"
toml = "1.1.2"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.4.0"
